tests/fixtures/valid/multi/type_import_namespace_collision/src/academy/main.gcl
import academy.lib.{ StudentConstructor, type Student, WeightlessStudent, student_score };

node learner: Student = StudentConstructor(mass: 70.0 kg);
node another_learner: Student = WeightlessStudent;
node score: Dimensionless = @student_score;
