tests/fixtures/invalid/multi/bare_type_import_collision/src/academy/main.gcl
import academy.lib.{ Student };

node learner: Student = Student(mass: 70.0 kg);
